# delete-bucket

./: .gitignore  Cargo.toml  README.md  justfile  rustwrap.yaml
.devcontainer/: Dockerfile  devcontainer.json
.github/workflows/: gate-code.yml  release.yml
src/: bucket_versioning.rs  lib.rs  main.rs
tests/: cli.rs
